Q-learning algorithm implemented

--- a/maze.ipynb
+++ b/maze.ipynb
@@ -8,7 +8,8 @@
    "outputs": [],
    "source": [
     "import gym\n",
-    "import gym_maze"
+    "import gym_maze\n",
+    "import numpy as np"
    ]
   },
   {
@@ -25,17 +26,250 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "1418444f-2865-4260-8b1d-337771e6f273",
+   "execution_count": 8,
+   "id": "cc860e2b-b2b3-457e-be79-c793fddf96f8",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "num_actions = 4\n",
+    "num_row = 10\n",
+    "num_column = 10\n",
+    "\n",
+    "# initialize Q-Table\n",
+    "Q_table = np.zeros((num_row, num_column, num_actions))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "f70da7ac-6457-4a6a-a444-989b299da848",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def exploration_explotation(state, epsilon, q_table):\n",
+    "    random = np.random.rand()\n",
+    "    if random < epsilon: # exploration\n",
+    "        action = env.action_space.sample()\n",
+    "    else: # explotation\n",
+    "        x, y = state\n",
+    "        action = np.argmax(q_table[int(x), int(y), :])\n",
+    "    return action"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "4aec7676-4d93-4ede-96c9-4e98f822a092",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_q_table(q_table, cur_state, action, next_state, reward, alpha, gamma):\n",
+    "    cur_x, cur_y = cur_state\n",
+    "    next_x, next_y = next_state\n",
+    "    # Q(S, A) <- (1 - α) Q(S, A) + [α * (r + (γ * max(Q(S', A*))))]\n",
+    "    sample = reward + (gamma * np.argmax(q_table[next_x, next_y, :])) \n",
+    "    new_q_value = (1 - alpha) * q_table[int(cur_x), int(cur_y), action] + alpha * sample\n",
+    "    q_table[int(cur_x), int(cur_y), action] = new_q_value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "d3403723-362e-49dd-a6bb-a698074cb4af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def q_learning(num_episodes, q_table, epsilon, alpha, gamma):\n",
+    "    \n",
+    "    for i in range(num_episodes):\n",
+    "        env.render()\n",
+    "        # start from the initial state\n",
+    "        cur_state = env.reset()\n",
+    "        game_over = False\n",
+    "\n",
+    "        while not game_over:\n",
+    "            # choose an action\n",
+    "            action = exploration_explotation(cur_state, epsilon, q_table)\n",
+    "\n",
+    "            # Perform the action and receive feedback from the environment\n",
+    "            next_state, reward, done, truncated = env.step(action)\n",
+    "\n",
+    "            if done:\n",
+    "                game_over = True\n",
+    "\n",
+    "            # calculate reward \n",
+    "            # TODO: define function to calculate reward to reach the goal faster\n",
+    "\n",
+    "            # update Q_table\n",
+    "            update_q_table(q_table, cur_state, action, next_state, reward, alpha, gamma)\n",
+    "\n",
+    "            cur_state = next_state\n",
+    "            \n",
+    "    return q_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "34711ff9-708a-4d4c-8ac4-a898ddec1bcc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 8.98999566e-01  1.43990386e+00  1.05388200e+00  8.99000000e-01]\n",
+      "  [ 2.69899992e+00  2.69807232e+00  2.62149340e+00  2.69900000e+00]\n",
+      "  [ 8.99000000e-01  8.99000000e-01  8.99000000e-01  8.99000000e-01]\n",
+      "  [ 1.79273258e+00  1.79900000e+00  1.79900000e+00  1.79900000e+00]\n",
+      "  [ 2.69897737e+00  2.69881245e+00  2.69900000e+00  2.69900000e+00]\n",
+      "  [ 1.79899950e+00  1.79900000e+00  1.79900000e+00  1.79900000e+00]\n",
+      "  [ 2.69900000e+00  2.69899383e+00  2.69899595e+00  2.69900000e+00]\n",
+      "  [ 2.69899992e+00  2.69900000e+00  2.69892264e+00  2.69900000e+00]\n",
+      "  [ 1.79226846e+00  1.79637273e+00  1.79901023e+00  1.79900000e+00]\n",
+      "  [ 1.76945302e+00  1.79900000e+00  1.79900000e+00  1.79900000e+00]]\n",
+      "\n",
+      " [[ 8.98268789e-01  8.99000000e-01  8.73996258e-01  8.19298168e-01]\n",
+      "  [ 7.49055459e-01  8.99000000e-01  7.49072137e-01  8.98046056e-01]\n",
+      "  [ 8.98999993e-01  8.99000000e-01  8.99000000e-01  8.99000000e-01]\n",
+      "  [ 2.69900000e+00  2.69900000e+00  2.69897815e+00  2.69900000e+00]\n",
+      "  [ 1.79900000e+00  1.79900000e+00  1.79900000e+00  1.79900000e+00]\n",
+      "  [ 2.69900000e+00  2.67833285e+00  2.69899826e+00  2.69900000e+00]\n",
+      "  [ 1.79900000e+00  1.72610000e+00  1.79900000e+00  1.79900000e+00]\n",
+      "  [ 2.69696847e+00  2.69894881e+00  2.69900000e+00  2.61761236e+00]\n",
+      "  [ 1.79900000e+00  1.79900000e+00  1.79900000e+00  1.79900000e+00]\n",
+      "  [ 8.99000000e-01  8.99000000e-01  8.99000000e-01  8.99000000e-01]]\n",
+      "\n",
+      " [[ 7.64026151e-01  8.98998457e-01  6.16799231e-01  6.79586769e-01]\n",
+      "  [ 8.98999608e-01  8.99000000e-01  8.98856818e-01  8.95960129e-01]\n",
+      "  [ 8.97822161e-01  8.99000000e-01  8.99000000e-01  8.88236709e-01]\n",
+      "  [ 1.79894606e+00  1.79899852e+00  1.79900000e+00  1.74896470e+00]\n",
+      "  [ 8.98999987e-01  8.99000000e-01  8.99000000e-01  8.99000000e-01]\n",
+      "  [ 8.98999972e-01  8.99000000e-01  8.99000000e-01  8.90281734e-01]\n",
+      "  [ 8.99000000e-01  8.99000000e-01  8.99000000e-01  8.99000000e-01]\n",
+      "  [ 1.79900000e+00  1.79900000e+00  1.79900000e+00  1.79900000e+00]\n",
+      "  [ 2.69900000e+00  2.69864060e+00  2.69900000e+00  2.69900000e+00]\n",
+      "  [-9.99999976e-04 -1.00000000e-03 -1.00000000e-03 -1.00000000e-03]]\n",
+      "\n",
+      " [[ 8.34701363e-01  8.98999999e-01  3.68090441e-01  6.45095847e-01]\n",
+      "  [ 8.98999983e-01  8.99000000e-01  8.97546039e-01  8.98906058e-01]\n",
+      "  [ 8.98999997e-01  8.99000000e-01  8.99000000e-01  8.99000000e-01]\n",
+      "  [ 2.69900000e+00  2.69900000e+00  2.69899995e+00  2.69900000e+00]\n",
+      "  [ 1.79900000e+00  1.77075705e+00  1.79900000e+00  1.79899750e+00]\n",
+      "  [ 1.79899980e+00  1.79900000e+00  1.79900000e+00  1.79900000e+00]\n",
+      "  [ 8.99000000e-01  8.99000000e-01  8.99000000e-01  8.99000000e-01]\n",
+      "  [ 8.92644232e-01  8.99000000e-01  4.21234541e-01  8.98304575e-01]\n",
+      "  [ 1.79900000e+00  1.79883474e+00  1.79900000e+00  1.79900000e+00]\n",
+      "  [ 2.66822478e+00  2.59167655e+00  2.62686622e+00  2.69224148e+00]]\n",
+      "\n",
+      " [[ 5.85481830e-01  8.99000007e-01  4.86135297e-01  8.40546186e-01]\n",
+      "  [ 8.95246655e-01  8.99000000e-01  8.68127749e-01  8.98823213e-01]\n",
+      "  [ 2.69900000e+00  2.69763013e+00  2.69841032e+00  2.69900000e+00]\n",
+      "  [-9.99998586e-04 -1.00000000e-03 -1.00000000e-03 -1.00000000e-03]\n",
+      "  [ 8.90280764e-01  8.99000000e-01  8.80772272e-01  8.97821937e-01]\n",
+      "  [ 8.19305347e-01  8.99000000e-01  7.64049913e-01  8.98374048e-01]\n",
+      "  [ 2.28026902e+00  1.80243451e+00  1.84522909e+00  2.69892263e+00]\n",
+      "  [ 1.79900000e+00  1.79899970e+00  1.79900000e+00  1.79900000e+00]\n",
+      "  [ 2.59306564e+00  2.69248748e+00  2.69899995e+00  2.69900000e+00]\n",
+      "  [ 8.99000000e-01  8.99000000e-01  8.98980658e-01  8.99000000e-01]]\n",
+      "\n",
+      " [[ 8.95621588e-01  8.97868657e-01  8.46703389e-01  7.32378278e-01]\n",
+      "  [ 8.98999337e-01  8.99000000e-01  8.97276694e-01  8.99000000e-01]\n",
+      "  [ 1.79900000e+00  1.79900000e+00  1.79900000e+00  1.79900000e+00]\n",
+      "  [ 2.69609068e+00  2.67779741e+00  2.69889677e+00  2.69900000e+00]\n",
+      "  [ 8.98988578e-01  8.99000000e-01  7.77544922e-01  8.99000000e-01]\n",
+      "  [ 1.79900000e+00  1.79900000e+00  1.79900000e+00  1.79664327e+00]\n",
+      "  [ 8.98999999e-01  8.99000000e-01  8.99000000e-01  8.99000000e-01]\n",
+      "  [ 1.74816268e+00  1.79802565e+00  1.79900000e+00  1.79897702e+00]\n",
+      "  [ 8.98944475e-01  8.99000000e-01  8.99000000e-01  8.98999848e-01]\n",
+      "  [ 2.69893354e+00  2.69900000e+00  2.64291099e+00  2.69900000e+00]]\n",
+      "\n",
+      " [[ 2.68869895e+00  2.69899998e+00  2.69899999e+00  2.69900000e+00]\n",
+      "  [ 1.79899893e+00  1.79900000e+00  1.79900000e+00  1.79900000e+00]\n",
+      "  [ 1.79899928e+00  1.79900000e+00  1.79900000e+00  1.79900000e+00]\n",
+      "  [ 2.69899878e+00  2.69899884e+00  2.69900000e+00  2.69900000e+00]\n",
+      "  [ 1.79896516e+00  1.79900000e+00  1.79900000e+00  1.79900000e+00]\n",
+      "  [ 8.99000000e-01  8.99000000e-01  8.99000000e-01  8.99000000e-01]\n",
+      "  [ 2.69803245e+00  2.68127412e+00  2.69900000e+00  2.69900000e+00]\n",
+      "  [ 1.66984297e+00  1.58027144e+00  1.75847141e+00  1.46564167e+00]\n",
+      "  [ 8.99000000e-01  8.99000000e-01  8.98999998e-01  8.98304258e-01]\n",
+      "  [ 8.94827239e-01  8.99000000e-01  8.98980642e-01  8.98996414e-01]]\n",
+      "\n",
+      " [[ 8.98989720e-01  8.99000000e-01  8.99000000e-01  8.40914874e-01]\n",
+      "  [ 8.95535762e-01  8.98959259e-01  6.70486262e-01  7.13864753e-01]\n",
+      "  [ 8.96537033e-01  8.99000000e-01  7.41589621e-01  8.98999999e-01]\n",
+      "  [ 2.68972099e+00  2.62884329e+00  2.64484772e+00  2.69900000e+00]\n",
+      "  [ 2.69900000e+00  2.69900000e+00  2.69898983e+00  2.69900000e+00]\n",
+      "  [ 8.98985898e-01  8.99000000e-01  8.99000000e-01  8.99000000e-01]\n",
+      "  [ 8.99000000e-01  8.99000000e-01  6.16884274e-01  8.97005540e-01]\n",
+      "  [ 1.32209919e+00  1.40620498e+00  1.46821296e+00  1.26278750e+00]\n",
+      "  [ 8.98978500e-01  8.99000000e-01  8.98985884e-01  7.64013305e-01]\n",
+      "  [ 8.98996002e-01  8.99000000e-01  8.98997387e-01  8.98840891e-01]]\n",
+      "\n",
+      " [[ 1.79679531e+00  1.79900000e+00  1.79900000e+00  1.79899173e+00]\n",
+      "  [ 8.92643677e-01  8.99000000e-01  5.50708980e-01  8.98803591e-01]\n",
+      "  [ 1.79899000e+00  1.79900000e+00  1.79900000e+00  1.79899199e+00]\n",
+      "  [ 1.72151590e+00  1.78334434e+00  1.79900000e+00  1.79899892e+00]\n",
+      "  [ 1.79892717e+00  1.79899996e+00  1.79900000e+00  1.79899657e+00]\n",
+      "  [ 2.69900000e+00  2.69849023e+00  1.75837890e+00  2.69900000e+00]\n",
+      "  [ 1.99688178e-02 -1.00000000e-03  9.48337586e-03 -1.00000000e-03]\n",
+      "  [ 8.39690088e-01  8.98850018e-01  8.81625316e-01  4.49735190e-01]\n",
+      "  [ 8.94766084e-01  8.98999046e-01  8.01983180e-01  6.16776355e-01]\n",
+      "  [ 8.73993477e-01  8.99000000e-01  8.98730521e-01  8.10652115e-01]]\n",
+      "\n",
+      " [[ 1.79899999e+00  1.65547855e+00  1.79900000e+00  1.78628170e+00]\n",
+      "  [ 1.79878991e+00  1.79900000e+00  1.79900000e+00  1.77745733e+00]\n",
+      "  [ 1.79899966e+00  1.79898650e+00  1.79900000e+00  1.79898149e+00]\n",
+      "  [ 1.77240390e+00  1.79881196e+00  1.79900000e+00  1.79798022e+00]\n",
+      "  [ 1.79687883e+00  1.79148955e+00  1.79900000e+00  1.76945302e+00]\n",
+      "  [ 8.34453792e-01  8.99000000e-01  8.99000000e-01  6.70486262e-01]\n",
+      "  [ 1.79890864e+00  1.71426007e+00  1.79900000e+00  1.74895942e+00]\n",
+      "  [ 1.78869760e+00  1.79798535e+00  1.79900000e+00  1.78628170e+00]\n",
+      "  [ 1.10199180e+00  1.74896470e+00  1.79900000e+00  1.73036448e+00]\n",
+      "  [ 2.06285891e+00  2.80000000e+00  2.80000000e+00  1.59469181e+00]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define the maximum number of iterations\n",
+    "NUM_EPISODES = 100\n",
+    "# Define explroration explotation trade-off\n",
+    "epsilon = 0.1\n",
+    "# Define learning rate\n",
+    "alpha = 0.1\n",
+    "# Define discount factor\n",
+    "gamma = 0.9\n",
+    "\n",
+    "# Q-Learning Algorithm\n",
+    "q_table = q_learning(NUM_EPISODES, Q_table, epsilon, alpha, gamma)\n",
+    "print(q_table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "1418444f-2865-4260-8b1d-337771e6f273",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\nfor episode in range(NUM_EPISODES):\\n\\n    #env.render()\\n\\n    # TODO: Implement the agent policy here\\n    # Note: .sample() is used to sample random action from the environment's action space\\n\\n    # Choose an action (Replace this random action with your agent's policy)\\n    action = env.action_space.sample()\\n\\n    # Perform the action and receive feedback from the environment\\n    next_state, reward, done, truncated = env.step(action)\\n    print(type(next_state))\\n    x, y = next_state\\n    print(type(x))\\n\\n    if done or truncated:\\n        observation = env.reset()\\n\\n# Close the environment\\nenv.close()\\n\""
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Define the maximum number of iterations\n",
     "NUM_EPISODES = 1000\n",
     "\n",
+    "'''\n",
     "for episode in range(NUM_EPISODES):\n",
     "\n",
-    "    env.render()\n",
+    "    #env.render()\n",
     "\n",
     "    # TODO: Implement the agent policy here\n",
     "    # Note: .sample() is used to sample random action from the environment's action space\n",
@@ -45,21 +279,17 @@
     "\n",
     "    # Perform the action and receive feedback from the environment\n",
     "    next_state, reward, done, truncated = env.step(action)\n",
+    "    print(type(next_state))\n",
+    "    x, y = next_state\n",
+    "    print(type(x))\n",
     "\n",
     "    if done or truncated:\n",
     "        observation = env.reset()\n",
     "\n",
     "# Close the environment\n",
-    "env.close()"
+    "env.close()\n",
+    "'''"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fd6c51dd-c674-46fe-ba52-3c5913e2edd4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
