show q_table and actions

--- a/maze.ipynb
+++ b/maze.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "5185fde6-be38-4dcb-838e-fb91ecd9ae0e",
    "metadata": {},
    "outputs": [],
@@ -10,12 +10,16 @@
     "import gym\n",
     "import gym_maze\n",
     "import numpy as np\n",
-    "import time"
+    "import time\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib.table import Table\n",
+    "from matplotlib.colors import Normalize\n",
+    "from matplotlib.patches import Polygon"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "1f473e23-170e-4993-883d-30cd3eba771d",
    "metadata": {},
    "outputs": [],
@@ -27,31 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "cc860e2b-b2b3-457e-be79-c793fddf96f8",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(10, 10, 4)\n"
-     ]
-    }
-   ],
-   "source": [
-    "num_actions = 4\n",
-    "num_row = env.maze_size[0]\n",
-    "num_column = env.maze_size[1]\n",
-    "\n",
-    "# initialize Q-Table\n",
-    "Q_table = np.zeros((num_row, num_column, num_actions))\n",
-    "print(Q_table.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "f70da7ac-6457-4a6a-a444-989b299da848",
    "metadata": {},
    "outputs": [],
@@ -68,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "4aec7676-4d93-4ede-96c9-4e98f822a092",
    "metadata": {},
    "outputs": [],
@@ -78,18 +58,21 @@
     "    next_x, next_y = next_state\n",
     "    # Q(S, A) <- (1 - α) Q(S, A) + [α * (r + (γ * max(Q(S', A*))))]\n",
     "    sample = reward + (gamma * np.argmax(q_table[next_x, next_y, :])) \n",
-    "    new_q_value = (1 - alpha) * q_table[int(cur_x), int(cur_y), action] + alpha * sample\n",
+    "    new_q_value = ((1 - alpha) * q_table[int(cur_x), int(cur_y), action]) + (alpha * sample)\n",
     "    q_table[int(cur_x), int(cur_y), action] = new_q_value"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "d3403723-362e-49dd-a6bb-a698074cb4af",
    "metadata": {},
    "outputs": [],
    "source": [
     "def q_learning(num_episodes, q_table, epsilon, alpha, gamma):\n",
+    "\n",
+    "    actions = np.zeros((env.maze_size[0], env.maze_size[1]))\n",
+    "    limit_action = 200\n",
     "    \n",
     "    for i in range(num_episodes):\n",
     "        \n",
@@ -107,15 +90,16 @@
     "\n",
     "            # choose an action\n",
     "            action = exploration_explotation(cur_state, epsilon, q_table)\n",
+    "            \n",
+    "            x, y = cur_state\n",
+    "            actions[int(x), int(y)] = action\n",
     "\n",
-    "            num_actions += 1\n",
+    "            # num_actions += 1\n",
+    "            # if num_actions > limit_action:\n",
+    "            #     break\n",
     "\n",
     "            # Perform the action and receive feedback from the environment\n",
     "            next_state, reward, done, truncated = env.step(action)\n",
-    "\n",
-    "            if np.array_equal(env.maze_view.robot, env.maze_view.goal):\n",
-    "                reward = 2000\n",
-    "\n",
     "                \n",
     "            if truncated:\n",
     "                break\n",
@@ -135,145 +119,100 @@
     "            # update state\n",
     "            cur_state = next_state\n",
     "\n",
-    "    return q_table"
+    "    return q_table, actions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "34711ff9-708a-4d4c-8ac4-a898ddec1bcc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[[ 1.96361896e+00  1.78713504e+00  2.01379085e+00  2.09696533e+00]\n",
-      "  [ 1.26328533e+00  1.39677817e+00  1.39905200e+00  1.39900000e+00]\n",
-      "  [ 1.38718886e+00  1.39821843e+00  1.39900000e+00  1.39900000e+00]\n",
-      "  [ 1.39900000e+00  1.39434972e+00  1.39900000e+00  1.37963189e+00]\n",
-      "  [ 6.99000000e-01  6.99000000e-01  6.94342242e-01  6.99000000e-01]\n",
-      "  [ 2.09900000e+00  1.67900000e+00  6.29082354e-01  1.67900000e+00]\n",
-      "  [ 6.12926295e-01  6.99000000e-01  3.56082354e-01  6.98999925e-01]\n",
-      "  [ 1.07048966e+00  2.09900000e+00  1.07008235e+00  2.09900000e+00]\n",
-      "  [ 5.08930605e-01  8.43057931e-01  6.98609576e-01  6.98999782e-01]\n",
-      "  [ 1.39010387e+00  1.32684887e+00  1.39881238e+00  9.90887648e-01]]\n",
-      "\n",
-      " [[ 1.32447548e+00  1.39897218e+00  1.39900000e+00  1.09827235e+00]\n",
-      "  [ 1.39829258e+00  9.60200100e-01  1.39900000e+00  1.14869335e+00]\n",
-      "  [ 6.99000000e-01  6.99000000e-01  6.99000000e-01  6.99000000e-01]\n",
-      "  [ 2.09493066e+00  2.09876541e+00  2.09886205e+00  2.09900000e+00]\n",
-      "  [ 1.39896536e+00  1.39900000e+00  1.39900000e+00  1.38988537e+00]\n",
-      "  [ 6.63705300e-01  6.99000000e-01  6.99000000e-01  6.98999893e-01]\n",
-      "  [ 6.99000000e-01  6.99000000e-01  6.98544842e-01  6.98865987e-01]\n",
-      "  [ 1.18676753e+00  8.89254980e-01  1.39900000e+00  1.23440905e+00]\n",
-      "  [ 1.39852125e+00  1.28370411e+00  1.39900000e+00  1.35946731e+00]\n",
-      "  [-7.53489693e-04 -9.98860110e-04 -1.00000000e-03 -9.99999363e-04]]\n",
-      "\n",
-      " [[ 6.85172554e-01  6.99006091e-01  6.99000000e-01  6.99000000e-01]\n",
-      "  [ 1.29559381e+00  2.09882781e+00  4.59140100e-01  2.05265089e+00]\n",
-      "  [ 2.09900000e+00  2.08915949e+00  0.00000000e+00  2.09900000e+00]\n",
-      "  [-9.59674067e-04 -1.00000000e-03 -9.99999991e-04 -9.99999999e-04]\n",
-      "  [ 6.98934353e-01  6.99000000e-01  6.99000000e-01  6.79254980e-01]\n",
-      "  [ 9.75336901e-01  7.00791255e-01  1.04720492e+00  2.06781224e+00]\n",
-      "  [ 6.89320788e-01  6.99000000e-01  6.98999982e-01  6.96677018e-01]\n",
-      "  [ 1.39821843e+00  1.31835043e+00  1.39900000e+00  0.00000000e+00]\n",
-      "  [ 6.98989075e-01  6.99000000e-01  6.98999885e-01  6.97861739e-01]\n",
-      "  [ 2.09899986e+00  2.09289598e+00  1.76633905e+00  2.09834209e+00]]\n",
-      "\n",
-      " [[ 6.85178473e-01  6.99000437e-01  6.31940070e-01  6.99000001e-01]\n",
-      "  [ 6.98726586e-01  6.99000000e-01  6.85178486e-01  6.16763349e-01]\n",
-      "  [ 6.98609409e-01  6.99000000e-01  6.92227458e-01  0.00000000e+00]\n",
-      "  [ 6.98999847e-01  6.98999847e-01  4.59243000e-01  0.00000000e+00]\n",
-      "  [ 6.96676021e-01  6.99000000e-01  6.95681455e-01  6.98993705e-01]\n",
-      "  [ 6.92794150e-01  6.98999991e-01  6.16728054e-01  2.09700000e-01]\n",
-      "  [ 6.99000000e-01  6.99000000e-01  0.00000000e+00  6.85172554e-01]\n",
-      "  [ 6.41409638e-01  6.99000000e-01  6.16728054e-01  6.41434344e-01]\n",
-      "  [ 6.70780723e-01  6.99000000e-01  6.52058049e-01  6.98609576e-01]\n",
-      "  [ 1.39893563e+00  1.39895494e+00  1.39900000e+00  1.37133127e+00]]\n",
-      "\n",
-      " [[ 2.09262609e+00  2.08858786e+00  6.29490000e-01  2.09558196e+00]\n",
-      "  [ 1.84967680e-03 -9.99999999e-04 -8.82351000e-04 -9.99202077e-04]\n",
-      "  [ 9.99570828e-02 -6.57000000e-04 -5.10000000e-04 -5.10000000e-04]\n",
-      "  [ 6.98673198e-01  7.13378557e-02  5.20409049e-01 -3.00000000e-04]\n",
-      "  [ 1.39900000e+00  1.39900000e+00  1.39900000e+00  1.39900000e+00]\n",
-      "  [ 2.04857900e+00  2.09282817e+00  1.95200000e+00  2.09900000e+00]\n",
-      "  [-9.70998309e-04 -1.00000000e-03 -1.00000000e-03 -1.00000000e-03]\n",
-      "  [ 9.64958070e-01  7.65148065e-02  1.30268633e+00  2.09899998e+00]\n",
-      "  [ 1.39740495e+00  1.37429371e+00  1.39900000e+00  1.28378633e+00]\n",
-      "  [ 6.95680030e-01  6.99000000e-01  6.99000000e-01  6.98999987e-01]]\n",
-      "\n",
-      " [[ 4.59140100e-01  6.98609576e-01  3.56490000e-01  0.00000000e+00]\n",
-      "  [ 6.92224552e-01  6.98999688e-01  3.56490000e-01  2.09700000e-01]\n",
-      "  [ 7.50248564e-03  0.00000000e+00 -5.10000000e-04  0.00000000e+00]\n",
-      "  [ 3.07940100e-01 -7.59900000e-04 -9.80226733e-04  0.00000000e+00]\n",
-      "  [ 6.89818827e-01  6.98487327e-01  0.00000000e+00  6.16763349e-01]\n",
-      "  [ 1.03941678e-03 -9.99934288e-04 -3.00000000e-04 -8.31930000e-04]\n",
-      "  [ 6.86893824e-01  6.98998703e-01  5.13466264e-01  3.56490000e-01]\n",
-      "  [ 6.58686747e-01  6.99000000e-01  6.98954067e-01  5.31170100e-01]\n",
-      "  [ 1.39900000e+00  1.39764433e+00  1.39900000e+00  1.39900000e+00]\n",
-      "  [ 1.38544232e+00  1.39895977e+00  1.39900000e+00  1.39873198e+00]]\n",
-      "\n",
-      " [[-6.85777772e-07  0.00000000e+00 -3.00000000e-04 -5.10000000e-04]\n",
-      "  [-3.00000000e-04  6.75960569e-01  0.00000000e+00 -3.00000000e-04]\n",
-      "  [ 2.37639380e-02  0.00000000e+00  0.00000000e+00 -3.00000000e-04]\n",
-      "  [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      "  [ 5.31094404e-01  6.98999993e-01  4.59140100e-01  6.96287666e-01]\n",
-      "  [ 1.39899969e+00 -3.00000000e-04  1.39900000e+00  1.23440905e+00]\n",
-      "  [ 6.99000000e-01  6.99000000e-01  6.99000000e-01  6.99000000e-01]\n",
-      "  [ 1.45375215e+00  1.39900000e+00  1.74199999e+00  1.39900000e+00]\n",
-      "  [ 2.08327662e+00  2.09899661e+00  1.88900000e+00  2.09900000e+00]\n",
-      "  [ 1.85205467e+00  1.85201945e+00  1.37904300e+00  2.09900000e+00]]\n",
-      "\n",
-      " [[-2.18119517e-05  6.03077649e-01  0.00000000e+00 -3.00000000e-04]\n",
-      "  [ 2.09490000e-01  2.09700000e-01  2.09490000e-01  0.00000000e+00]\n",
-      "  [ 5.03343000e-01  7.13343000e-01  4.19700000e-01  5.62143000e-01]\n",
-      "  [-3.00000000e-04  6.98203217e-01  2.09490000e-01  2.09700000e-01]\n",
-      "  [ 2.05549012e+00  2.02117767e+00  9.37940100e-01  2.07284966e+00]\n",
-      "  [ 3.76954961e-01  4.76252051e-01 -6.57000000e-04 -9.86158713e-04]\n",
-      "  [ 6.99000000e-01  6.99000000e-01  6.98951624e-01  6.16763349e-01]\n",
-      "  [ 6.98999999e-01  6.99000000e-01  6.99000000e-01  6.85168402e-01]\n",
-      "  [ 1.39883552e+00  1.16378435e+00  1.39886867e+00  1.28378633e+00]\n",
-      "  [ 4.40343000e-01 -9.71752475e-04 -9.99984222e-04  0.00000000e+00]]\n",
-      "\n",
-      " [[-3.00480044e-04  2.09490000e-01  2.09343000e-01 -6.57000000e-04]\n",
-      "  [ 5.81468649e-01  6.31889649e-01  0.00000000e+00  0.00000000e+00]\n",
-      "  [-3.00000000e-04  6.29057648e-01 -5.10000000e-04  0.00000000e+00]\n",
-      "  [ 2.09490000e-01  6.98442252e-01  0.00000000e+00  0.00000000e+00]\n",
-      "  [ 6.98804525e-01  6.99000000e-01  6.87729238e-01  6.98998702e-01]\n",
-      "  [ 1.38950962e+00  4.19490000e-01  1.39900000e+00  0.00000000e+00]\n",
-      "  [ 6.79246506e-01  6.99000000e-01  6.98954067e-01  6.98866085e-01]\n",
-      "  [ 6.99000000e-01  6.99000000e-01  6.98691741e-01  6.41409638e-01]\n",
-      "  [ 3.45825189e-03 -1.00000000e-03 -1.00000000e-03 -9.17645700e-04]\n",
-      "  [ 6.16728054e-01  6.99813854e-01  5.62143000e-01  2.09490000e-01]]\n",
-      "\n",
-      " [[ 1.39788347e+00 -3.00000000e-04  1.39900000e+00  1.31835043e+00]\n",
-      "  [ 6.94257186e-01  6.99000000e-01  6.98999091e-01  6.85178486e-01]\n",
-      "  [ 1.28376163e+00  0.00000000e+00  1.39900000e+00  7.13490000e-01]\n",
-      "  [ 1.39235674e+00  1.34253320e+00  1.39900000e+00  9.19143000e-01]\n",
-      "  [ 6.98991384e-01  6.99000000e-01  6.99000000e-01  6.99000000e-01]\n",
-      "  [ 2.08639461e+00  2.09899981e+00  2.09864037e+00  2.09900000e+00]\n",
-      "  [ 1.37133127e+00  1.39900000e+00  1.39900000e+00  1.39900000e+00]\n",
-      "  [ 6.94259216e-01  6.99000000e-01  6.58686747e-01  0.00000000e+00]\n",
-      "  [ 6.99000000e-01  6.99000000e-01  6.79254980e-01  0.00000000e+00]\n",
-      "  [ 6.00210000e+02  2.00070000e+03  1.66439193e+03  6.00210000e+02]]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "num_actions = 4\n",
+    "num_row = env.maze_size[0]\n",
+    "num_column = env.maze_size[1]\n",
+    "\n",
+    "# initialize Q-Table\n",
+    "Q_table = np.zeros((num_row, num_column, num_actions))\n",
+    "\n",
+    "\n",
     "# Define the maximum number of iterations\n",
-    "NUM_EPISODES = 100\n",
+    "NUM_EPISODES = 10000\n",
     "# Define explroration explotation trade-off\n",
-    "epsilon = 0.09\n",
+    "epsilon = 0.2\n",
     "# Define learning rate\n",
     "alpha = 0.3\n",
     "# Define discount factor\n",
     "gamma = 0.7\n",
     "\n",
     "# Q-Learning Algorithm\n",
-    "q_table = q_learning(NUM_EPISODES, Q_table, epsilon, alpha, gamma)\n",
+    "q_table, actions = q_learning(NUM_EPISODES, Q_table, epsilon, alpha, gamma)\n",
     "\n",
-    "print(q_table)"
+    "# show results\n",
+    "show_q_table(q_table)\n",
+    "show_actions(actions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b459719e-4c25-42f6-a712-1bbacc94343b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def show_q_table(q_table):\n",
+    "    rows, cols = q_table.shape[:2]\n",
+    "\n",
+    "    fig, ax_array = plt.subplots(rows, cols, figsize=(cols, rows))\n",
+    "    plt.subplots_adjust(wspace=0.1, hspace=0.1)\n",
+    "\n",
+    "    for i in range(rows):\n",
+    "        for j in range(cols):\n",
+    "            values = q_table[i, j, :]\n",
+    "            ax = ax_array[i, j]\n",
+    "\n",
+    "            center = (0.5, 0.5)\n",
+    "            triangle1 = Polygon([\n",
+    "                [center[0] - 0.5, center[1] + 0.5],\n",
+    "                [center[0] + 0.5, center[1] + 0.5],\n",
+    "                [center[0], center[1]],\n",
+    "            ], closed=True, edgecolor='black', facecolor='none')\n",
+    "\n",
+    "            triangle2 = Polygon([\n",
+    "                [center[0] - 0.5, center[1] + 0.5],\n",
+    "                [center[0] - 0.5, center[1] - 0.5],\n",
+    "                [center[0], center[1]],\n",
+    "            ], closed=True, edgecolor='black', facecolor='none')\n",
+    "\n",
+    "            triangle3 = Polygon([\n",
+    "                [center[0] - 0.5, center[1] - 0.5],\n",
+    "                [center[0] + 0.5, center[1] - 0.5],\n",
+    "                [center[0], center[1]],\n",
+    "            ], closed=True, edgecolor='black', facecolor='none')\n",
+    "\n",
+    "            triangle4 = Polygon([\n",
+    "                [center[0] + 0.5, center[1] - 0.5],\n",
+    "                [center[0] + 0.5, center[1] + 0.5],\n",
+    "                [center[0], center[1]],\n",
+    "            ], closed=True, edgecolor='black', facecolor='none')\n",
+    "\n",
+    "            ax.text(center[0], center[1] + 0.25, f'{values[0]:.4f}', ha='center', va='center', fontsize=6)\n",
+    "            ax.text(center[0], center[1] - 0.25, f'{values[1]:.4f}', ha='center', va='center', fontsize=6)\n",
+    "            ax.text(center[0] + 0.25, center[1], f'{values[2]:.4f}', ha='center', va='center', fontsize=6)\n",
+    "            ax.text(center[0] - 0.25, center[1], f'{values[3]:.4f}', ha='center', va='center', fontsize=6)\n",
+    "\n",
+    "            ax.add_patch(triangle1)\n",
+    "            ax.add_patch(triangle2)\n",
+    "            ax.add_patch(triangle3)\n",
+    "            ax.add_patch(triangle4)\n",
+    "\n",
+    "            ax.set_xlim(0, 1)\n",
+    "            ax.set_ylim(0, 1)\n",
+    "            ax.axis('off')\n",
+    "\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()"
    ]
   },
   {
@@ -282,7 +221,32 @@
    "id": "3db1381a-de88-4ed0-b763-f600e4541988",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def show_actions(actions):\n",
+    "    actions = actions.astype(int)\n",
+    "\n",
+    "    fig, ax = plt.subplots()\n",
+    "    table = ax.table(cellText=actions, loc='center', cellLoc='center', edges='open')\n",
+    "    ax.axis('off')\n",
+    "\n",
+    "    for i in range(actions.shape[0]):\n",
+    "        for j in range(actions.shape[1]):\n",
+    "            value = actions[i, j]\n",
+    "            if value == 0:\n",
+    "                arrow = u'$\\u2191$'   # Up arrow\n",
+    "            elif value == 1:\n",
+    "                arrow = u'$\\u2193$'   # Down arrow\n",
+    "            elif value == 2:\n",
+    "                arrow = u'$\\u2192$'   # Right arrow\n",
+    "            elif value == 3:\n",
+    "                arrow = u'$\\u2190$'   # Left arrow\n",
+    "            else:\n",
+    "                arrow = ''\n",
+    "        \n",
+    "            table[i, j].get_text().set_text(arrow)\n",
+    "\n",
+    "    plt.show()"
+   ]
   }
  ],
  "metadata": {
